--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,42 @@
 {
   "PF2EPointsTracker.ModuleName": "PF2e Points Tracker",
   "PF2EPointsTracker.Init": "Initializing PF2e Points Tracker module.",
-  "PF2EPointsTracker.Ready": "PF2e Points Tracker is ready."
+  "PF2EPointsTracker.Ready": "PF2e Points Tracker is ready.",
+  "PF2E.PointsTracker.Research.Title": "Research Tracker",
+  "PF2E.PointsTracker.Research.CreateTopic": "New Topic",
+  "PF2E.PointsTracker.Research.Create": "Create",
+  "PF2E.PointsTracker.Research.TopicName": "Topic Name",
+  "PF2E.PointsTracker.Research.Target": "Target Points",
+  "PF2E.PointsTracker.Research.Skill": "Skill",
+  "PF2E.PointsTracker.Research.Difficulty": "Difficulty",
+  "PF2E.PointsTracker.Research.Summary": "Summary",
+  "PF2E.PointsTracker.Research.DeleteTopic": "Delete Topic",
+  "PF2E.PointsTracker.Research.DeleteTopicConfirm": "Are you sure you want to remove this research topic?",
+  "PF2E.PointsTracker.Research.PointChange": "Point Change",
+  "PF2E.PointsTracker.Research.Reason": "Reason",
+  "PF2E.PointsTracker.Research.AdjustPoints": "Adjust Research Points",
+  "PF2E.PointsTracker.Research.Apply": "Apply",
+  "PF2E.PointsTracker.Research.ParticipantActor": "Participant Actor",
+  "PF2E.PointsTracker.Research.ParticipantName": "Participant Name",
+  "PF2E.PointsTracker.Research.Role": "Role",
+  "PF2E.PointsTracker.Research.AddParticipant": "Add Participant",
+  "PF2E.PointsTracker.Research.Add": "Add",
+  "PF2E.PointsTracker.Research.NoActor": "Participant must be linked to an Actor to roll.",
+  "PF2E.PointsTracker.Research.ActorMissingSkills": "Selected actor does not have skills available for rolling.",
+  "PF2E.PointsTracker.Research.SkillUnavailable": "Actor does not have the selected skill.",
+  "PF2E.PointsTracker.Research.RollResult": "Roll Total: {total}",
+  "PF2E.PointsTracker.Research.ApplyPoints": "Apply Research Points",
+  "PF2E.PointsTracker.Research.RollSummary": "Roll Total: {total}",
+  "PF2E.PointsTracker.Research.TargetLabel": "Target {target} (Current {progress})",
+  "PF2E.PointsTracker.Research.DifficultyLabel": "Difficulty: {difficulty}",
+  "PF2E.PointsTracker.Research.Participants": "Participants",
+  "PF2E.PointsTracker.Research.NoParticipants": "No participants assigned yet.",
+  "PF2E.PointsTracker.Research.NoTopics": "No research topics have been created.",
+  "PF2E.PointsTracker.Research.Log": "Research Log",
+  "PF2E.PointsTracker.Research.NoLog": "No research activity recorded yet.",
+  "PF2E.PointsTracker.Research.PointsEarned": "Gained {points} research points.",
+  "PF2E.PointsTracker.Research.PointsSpent": "Spent {points} research points.",
+  "PF2E.PointsTracker.Research.PointsNoChange": "No points gained or lost.",
+  "PF2E.PointsTracker.Research.DefaultName": "New Research Topic",
+  "PF2E.PointsTracker.Research.Participant": "Participant"
 }
