Add research reveal thresholds and import/export utilities

--- a/lang/en.json
+++ b/lang/en.json
@@ -38,5 +38,25 @@
   "PF2E.PointsTracker.Research.PointsSpent": "Spent {points} research points.",
   "PF2E.PointsTracker.Research.PointsNoChange": "No points gained or lost.",
   "PF2E.PointsTracker.Research.DefaultName": "New Research Topic",
-  "PF2E.PointsTracker.Research.Participant": "Participant"
+  "PF2E.PointsTracker.Research.Participant": "Participant",
+  "PF2E.PointsTracker.Research.Thresholds": "Threshold Reveals",
+  "PF2E.PointsTracker.Research.ThresholdPoints": "Reveal at {points} RP",
+  "PF2E.PointsTracker.Research.ThresholdRevealed": "Sent",
+  "PF2E.PointsTracker.Research.ThresholdUnlocked": "Unlocked",
+  "PF2E.PointsTracker.Research.ThresholdLocked": "Locked",
+  "PF2E.PointsTracker.Research.PlayerText": "Player Text",
+  "PF2E.PointsTracker.Research.GMText": "GM Notes",
+  "PF2E.PointsTracker.Research.RevealSend": "Send Reveal",
+  "PF2E.PointsTracker.Research.RevealResend": "Resend Reveal",
+  "PF2E.PointsTracker.Research.Import": "Import",
+  "PF2E.PointsTracker.Research.Export": "Export",
+  "PF2E.PointsTracker.Research.ImportTitle": "Import Research Topics",
+  "PF2E.PointsTracker.Research.ImportDescription": "Select a JSON file exported from the research tracker to merge topics into this world.",
+  "PF2E.PointsTracker.Research.ImportNoFile": "Please choose a JSON file to import.",
+  "PF2E.PointsTracker.Research.ImportFailure": "Unable to read the selected file.",
+  "PF2E.PointsTracker.Research.ImportInvalid": "The selected file is not a valid research tracker export.",
+  "PF2E.PointsTracker.Research.ImportSuccess": "Imported {count} topics ({created} new, {updated} updated).",
+  "PF2E.PointsTracker.Research.ExportSuccess": "Exported research topics to a JSON file.",
+  "PF2E.PointsTracker.Research.RevealUnlockedLog": "Unlocked reveal for {topic} at {points} RP.",
+  "PF2E.PointsTracker.Research.RevealMessageHeader": "{topic} - {points} RP"
 }
