Add structured research locations and statblock UI

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,60 +3,89 @@
   "PF2EPointsTracker.Init": "Initializing PF2e Points Tracker module.",
   "PF2EPointsTracker.Ready": "PF2e Points Tracker is ready.",
   "PF2E.PointsTracker.Research.Title": "Research Tracker",
-  "PF2E.PointsTracker.Research.CreateTopic": "New Topic",
-  "PF2E.PointsTracker.Research.Create": "Create",
-  "PF2E.PointsTracker.Research.TopicName": "Topic Name",
-  "PF2E.PointsTracker.Research.Target": "Target Points",
-  "PF2E.PointsTracker.Research.Skill": "Skill",
-  "PF2E.PointsTracker.Research.Difficulty": "Difficulty",
-  "PF2E.PointsTracker.Research.Summary": "Summary",
-  "PF2E.PointsTracker.Research.DeleteTopic": "Delete Topic",
-  "PF2E.PointsTracker.Research.DeleteTopicConfirm": "Are you sure you want to remove this research topic?",
-  "PF2E.PointsTracker.Research.PointChange": "Point Change",
-  "PF2E.PointsTracker.Research.Reason": "Reason",
+  "PF2E.PointsTracker.Research.Actions": "Actions",
+  "PF2E.PointsTracker.Research.Add": "Add",
+  "PF2E.PointsTracker.Research.AddLocation": "Add Location",
+  "PF2E.PointsTracker.Research.AddParticipant": "Add Participant",
   "PF2E.PointsTracker.Research.AdjustPoints": "Adjust Research Points",
   "PF2E.PointsTracker.Research.Apply": "Apply",
+  "PF2E.PointsTracker.Research.ApplyPoints": "Apply Research Points",
+  "PF2E.PointsTracker.Research.ActorMissingSkills": "Selected actor does not have skills available for rolling.",
+  "PF2E.PointsTracker.Research.Create": "Create",
+  "PF2E.PointsTracker.Research.CreateLocation": "Create Location",
+  "PF2E.PointsTracker.Research.CreateTopic": "New Topic",
+  "PF2E.PointsTracker.Research.DefaultName": "New Research Topic",
+  "PF2E.PointsTracker.Research.DeleteLocation": "Delete Location",
+  "PF2E.PointsTracker.Research.DeleteLocationConfirm": "Are you sure you want to remove this location?",
+  "PF2E.PointsTracker.Research.DeleteTopic": "Delete Topic",
+  "PF2E.PointsTracker.Research.DeleteTopicConfirm": "Are you sure you want to remove this research topic?",
+  "PF2E.PointsTracker.Research.Difficulty": "Difficulty",
+  "PF2E.PointsTracker.Research.DifficultyLabel": "Difficulty: {difficulty}",
+  "PF2E.PointsTracker.Research.EditLocation": "Edit Location",
+  "PF2E.PointsTracker.Research.Export": "Export",
+  "PF2E.PointsTracker.Research.ExportSuccess": "Exported research topics to a JSON file.",
+  "PF2E.PointsTracker.Research.GatherInformation": "Gather Information",
+  "PF2E.PointsTracker.Research.GMText": "GM Notes",
+  "PF2E.PointsTracker.Research.Import": "Import",
+  "PF2E.PointsTracker.Research.ImportDescription": "Select a JSON file exported from the research tracker to merge topics into this world.",
+  "PF2E.PointsTracker.Research.ImportFailure": "Unable to read the selected file.",
+  "PF2E.PointsTracker.Research.ImportInvalid": "The selected file is not a valid research tracker export.",
+  "PF2E.PointsTracker.Research.ImportNoFile": "Please choose a JSON file to import.",
+  "PF2E.PointsTracker.Research.ImportSuccess": "Imported {count} topics ({created} new, {updated} updated).",
+  "PF2E.PointsTracker.Research.ImportTitle": "Import Research Topics",
+  "PF2E.PointsTracker.Research.LocationCollected": "Points Collected",
+  "PF2E.PointsTracker.Research.LocationDefaultName": "New Location",
+  "PF2E.PointsTracker.Research.LocationList": "Locations",
+  "PF2E.PointsTracker.Research.LocationListHint": "Define the research sites, their maximum points, and any starting progress.",
+  "PF2E.PointsTracker.Research.LocationLogSuffix": " ({location})",
+  "PF2E.PointsTracker.Research.LocationMaxPoints": "Maximum Points",
+  "PF2E.PointsTracker.Research.LocationName": "Location Name",
+  "PF2E.PointsTracker.Research.LocationNameHeader": "Location",
+  "PF2E.PointsTracker.Research.LocationOptionLabel": "{name} ({collected}/{max})",
+  "PF2E.PointsTracker.Research.LocationProgress": "{collected} / {max}",
+  "PF2E.PointsTracker.Research.LocationProgressHeader": "Progress",
+  "PF2E.PointsTracker.Research.LocationSelect": "Apply to Location",
+  "PF2E.PointsTracker.Research.LocationTotals": "Total: {collected} / {max}",
+  "PF2E.PointsTracker.Research.LocationUnlimited": "∞",
+  "PF2E.PointsTracker.Research.LocationsHeading": "Research Sites",
+  "PF2E.PointsTracker.Research.Log": "Research Log",
+  "PF2E.PointsTracker.Research.NoActor": "Participant must be linked to an Actor to roll.",
+  "PF2E.PointsTracker.Research.NoGatherInformation": "No information-gathering notes recorded.",
+  "PF2E.PointsTracker.Research.NoLocations": "No locations defined yet.",
+  "PF2E.PointsTracker.Research.NoLog": "No research activity recorded yet.",
+  "PF2E.PointsTracker.Research.NoParticipants": "No participants assigned yet.",
+  "PF2E.PointsTracker.Research.NoResearchChecks": "No research check details recorded.",
+  "PF2E.PointsTracker.Research.NoTopics": "No research topics have been created.",
+  "PF2E.PointsTracker.Research.Participant": "Participant",
   "PF2E.PointsTracker.Research.ParticipantActor": "Participant Actor",
   "PF2E.PointsTracker.Research.ParticipantName": "Participant Name",
-  "PF2E.PointsTracker.Research.Role": "Role",
-  "PF2E.PointsTracker.Research.AddParticipant": "Add Participant",
-  "PF2E.PointsTracker.Research.Add": "Add",
-  "PF2E.PointsTracker.Research.NoActor": "Participant must be linked to an Actor to roll.",
-  "PF2E.PointsTracker.Research.ActorMissingSkills": "Selected actor does not have skills available for rolling.",
-  "PF2E.PointsTracker.Research.SkillUnavailable": "Actor does not have the selected skill.",
-  "PF2E.PointsTracker.Research.RollResult": "Roll Total: {total}",
-  "PF2E.PointsTracker.Research.ApplyPoints": "Apply Research Points",
-  "PF2E.PointsTracker.Research.RollSummary": "Roll Total: {total}",
-  "PF2E.PointsTracker.Research.TargetLabel": "Target {target} (Current {progress})",
-  "PF2E.PointsTracker.Research.DifficultyLabel": "Difficulty: {difficulty}",
   "PF2E.PointsTracker.Research.Participants": "Participants",
-  "PF2E.PointsTracker.Research.NoParticipants": "No participants assigned yet.",
-  "PF2E.PointsTracker.Research.NoTopics": "No research topics have been created.",
-  "PF2E.PointsTracker.Research.Log": "Research Log",
-  "PF2E.PointsTracker.Research.NoLog": "No research activity recorded yet.",
+  "PF2E.PointsTracker.Research.PointChange": "Point Change",
   "PF2E.PointsTracker.Research.PointsEarned": "Gained {points} research points.",
-  "PF2E.PointsTracker.Research.PointsSpent": "Spent {points} research points.",
   "PF2E.PointsTracker.Research.PointsNoChange": "No points gained or lost.",
-  "PF2E.PointsTracker.Research.DefaultName": "New Research Topic",
-  "PF2E.PointsTracker.Research.Participant": "Participant",
-  "PF2E.PointsTracker.Research.Thresholds": "Threshold Reveals",
+  "PF2E.PointsTracker.Research.PointsSpent": "Spent {points} research points.",
+  "PF2E.PointsTracker.Research.ProgressLabel": "Progress: {collected} / {target}",
+  "PF2E.PointsTracker.Research.Completed": "Completed",
+  "PF2E.PointsTracker.Research.RemoveLocation": "Remove Location",
+  "PF2E.PointsTracker.Research.Reason": "Reason",
+  "PF2E.PointsTracker.Research.ResearchChecks": "Research Checks",
+  "PF2E.PointsTracker.Research.RevealMessageHeader": "{topic} - {points} RP",
+  "PF2E.PointsTracker.Research.RevealResend": "Resend Reveal",
+  "PF2E.PointsTracker.Research.RevealSend": "Send Reveal",
+  "PF2E.PointsTracker.Research.RevealUnlockedLog": "Unlocked reveal for {topic} at {points} RP.",
+  "PF2E.PointsTracker.Research.RollResult": "Roll Total: {total}",
+  "PF2E.PointsTracker.Research.RollSummary": "Roll Total: {total}",
+  "PF2E.PointsTracker.Research.Role": "Role",
+  "PF2E.PointsTracker.Research.Save": "Save",
+  "PF2E.PointsTracker.Research.Skill": "Skill",
+  "PF2E.PointsTracker.Research.SkillLabel": "Skill: {skill}",
+  "PF2E.PointsTracker.Research.SkillUnavailable": "Actor does not have the selected skill.",
+  "PF2E.PointsTracker.Research.Summary": "Summary",
+  "PF2E.PointsTracker.Research.Target": "Target Points",
+  "PF2E.PointsTracker.Research.TargetLabel": "Target {target} (Current {progress})",
+  "PF2E.PointsTracker.Research.ThresholdLocked": "Locked",
   "PF2E.PointsTracker.Research.ThresholdPoints": "Reveal at {points} RP",
   "PF2E.PointsTracker.Research.ThresholdRevealed": "Sent",
   "PF2E.PointsTracker.Research.ThresholdUnlocked": "Unlocked",
-  "PF2E.PointsTracker.Research.ThresholdLocked": "Locked",
-  "PF2E.PointsTracker.Research.PlayerText": "Player Text",
-  "PF2E.PointsTracker.Research.GMText": "GM Notes",
-  "PF2E.PointsTracker.Research.RevealSend": "Send Reveal",
-  "PF2E.PointsTracker.Research.RevealResend": "Resend Reveal",
-  "PF2E.PointsTracker.Research.Import": "Import",
-  "PF2E.PointsTracker.Research.Export": "Export",
-  "PF2E.PointsTracker.Research.ImportTitle": "Import Research Topics",
-  "PF2E.PointsTracker.Research.ImportDescription": "Select a JSON file exported from the research tracker to merge topics into this world.",
-  "PF2E.PointsTracker.Research.ImportNoFile": "Please choose a JSON file to import.",
-  "PF2E.PointsTracker.Research.ImportFailure": "Unable to read the selected file.",
-  "PF2E.PointsTracker.Research.ImportInvalid": "The selected file is not a valid research tracker export.",
-  "PF2E.PointsTracker.Research.ImportSuccess": "Imported {count} topics ({created} new, {updated} updated).",
-  "PF2E.PointsTracker.Research.ExportSuccess": "Exported research topics to a JSON file.",
-  "PF2E.PointsTracker.Research.RevealUnlockedLog": "Unlocked reveal for {topic} at {points} RP.",
-  "PF2E.PointsTracker.Research.RevealMessageHeader": "{topic} - {points} RP"
+  "PF2E.PointsTracker.Research.Thresholds": "Threshold Reveals"
 }
