Add topic editing and use party actors

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,7 +6,6 @@
   "PF2E.PointsTracker.Research.Actions": "Actions",
   "PF2E.PointsTracker.Research.Add": "Add",
   "PF2E.PointsTracker.Research.AddLocation": "Add Location",
-  "PF2E.PointsTracker.Research.AddParticipant": "Add Participant",
   "PF2E.PointsTracker.Research.AdjustPoints": "Adjust Research Points",
   "PF2E.PointsTracker.Research.Apply": "Apply",
   "PF2E.PointsTracker.Research.ApplyPoints": "Apply Research Points",
@@ -22,6 +21,7 @@
   "PF2E.PointsTracker.Research.Difficulty": "Difficulty",
   "PF2E.PointsTracker.Research.DifficultyLabel": "Difficulty: {difficulty}",
   "PF2E.PointsTracker.Research.EditLocation": "Edit Location",
+  "PF2E.PointsTracker.Research.EditTopic": "Edit Topic",
   "PF2E.PointsTracker.Research.Export": "Export",
   "PF2E.PointsTracker.Research.ExportSuccess": "Exported research topics to a JSON file.",
   "PF2E.PointsTracker.Research.GatherInformation": "Gather Information",
@@ -49,17 +49,14 @@
   "PF2E.PointsTracker.Research.LocationUnlimited": "∞",
   "PF2E.PointsTracker.Research.LocationsHeading": "Research Sites",
   "PF2E.PointsTracker.Research.Log": "Research Log",
-  "PF2E.PointsTracker.Research.NoActor": "Participant must be linked to an Actor to roll.",
+  "PF2E.PointsTracker.Research.NoActor": "Unable to locate the selected actor.",
   "PF2E.PointsTracker.Research.NoGatherInformation": "No information-gathering notes recorded.",
   "PF2E.PointsTracker.Research.NoLocations": "No locations defined yet.",
   "PF2E.PointsTracker.Research.NoLog": "No research activity recorded yet.",
-  "PF2E.PointsTracker.Research.NoParticipants": "No participants assigned yet.",
+  "PF2E.PointsTracker.Research.NoPartyMembers": "No party members are currently available.",
   "PF2E.PointsTracker.Research.NoResearchChecks": "No research check details recorded.",
   "PF2E.PointsTracker.Research.NoTopics": "No research topics have been created.",
-  "PF2E.PointsTracker.Research.Participant": "Participant",
-  "PF2E.PointsTracker.Research.ParticipantActor": "Participant Actor",
-  "PF2E.PointsTracker.Research.ParticipantName": "Participant Name",
-  "PF2E.PointsTracker.Research.Participants": "Participants",
+  "PF2E.PointsTracker.Research.PartyActors": "Party Members",
   "PF2E.PointsTracker.Research.PointChange": "Point Change",
   "PF2E.PointsTracker.Research.PointsEarned": "Gained {points} research points.",
   "PF2E.PointsTracker.Research.PointsNoChange": "No points gained or lost.",
@@ -75,11 +72,11 @@
   "PF2E.PointsTracker.Research.RevealUnlockedLog": "Unlocked reveal for {topic} at {points} RP.",
   "PF2E.PointsTracker.Research.RollResult": "Roll Total: {total}",
   "PF2E.PointsTracker.Research.RollSummary": "Roll Total: {total}",
-  "PF2E.PointsTracker.Research.Role": "Role",
   "PF2E.PointsTracker.Research.Save": "Save",
   "PF2E.PointsTracker.Research.Skill": "Skill",
   "PF2E.PointsTracker.Research.SkillLabel": "Skill: {skill}",
   "PF2E.PointsTracker.Research.SkillUnavailable": "Actor does not have the selected skill.",
+  "PF2E.PointsTracker.Research.NoSkillConfigured": "No research skill configured for this topic.",
   "PF2E.PointsTracker.Research.Summary": "Summary",
   "PF2E.PointsTracker.Research.Target": "Target Points",
   "PF2E.PointsTracker.Research.TargetLabel": "Target {target} (Current {progress})",
