Add location checks to research tracker

--- a/lang/en.json
+++ b/lang/en.json
@@ -35,6 +35,9 @@
   "PF2E.PointsTracker.Research.ImportTitle": "Import Research Topics",
   "PF2E.PointsTracker.Research.LocationCollected": "Points Collected",
   "PF2E.PointsTracker.Research.LocationDefaultName": "New Location",
+  "PF2E.PointsTracker.Research.LocationDescription": "Description",
+  "PF2E.PointsTracker.Research.LocationDC": "Check DC",
+  "PF2E.PointsTracker.Research.LocationDCLabel": "DC: {dc}",
   "PF2E.PointsTracker.Research.LocationList": "Locations",
   "PF2E.PointsTracker.Research.LocationListHint": "Define the research sites, their maximum points, and any starting progress.",
   "PF2E.PointsTracker.Research.LocationLogSuffix": " ({location})",
@@ -42,12 +45,17 @@
   "PF2E.PointsTracker.Research.LocationName": "Location Name",
   "PF2E.PointsTracker.Research.LocationNameHeader": "Location",
   "PF2E.PointsTracker.Research.LocationOptionLabel": "{name} ({collected}/{max})",
+  "PF2E.PointsTracker.Research.LocationPostCheck": "Post Check",
   "PF2E.PointsTracker.Research.LocationProgress": "{collected} / {max}",
   "PF2E.PointsTracker.Research.LocationProgressHeader": "Progress",
+  "PF2E.PointsTracker.Research.LocationSkill": "Location Skill",
+  "PF2E.PointsTracker.Research.LocationSkillLabel": "Skill: {skill}",
   "PF2E.PointsTracker.Research.LocationSelect": "Apply to Location",
   "PF2E.PointsTracker.Research.LocationTotals": "Total: {collected} / {max}",
   "PF2E.PointsTracker.Research.LocationUnlimited": "∞",
   "PF2E.PointsTracker.Research.LocationsHeading": "Research Sites",
+  "PF2E.PointsTracker.Research.LocationMissingSkill": "Set a skill for this location before posting a check.",
+  "PF2E.PointsTracker.Research.LocationMissingDC": "Set a DC for this location before posting a check.",
   "PF2E.PointsTracker.Research.Log": "Research Log",
   "PF2E.PointsTracker.Research.NoActor": "Unable to locate the selected actor.",
   "PF2E.PointsTracker.Research.NoGatherInformation": "No information-gathering notes recorded.",
