Add party member assignments to research locations

--- a/lang/en.json
+++ b/lang/en.json
@@ -38,6 +38,12 @@
   "PF2E.PointsTracker.Research.LocationDescription": "Description",
   "PF2E.PointsTracker.Research.LocationDC": "Check DC",
   "PF2E.PointsTracker.Research.LocationDCLabel": "DC: {dc}",
+  "PF2E.PointsTracker.Research.LocationAssignments": "Assign Party Members",
+  "PF2E.PointsTracker.Research.LocationAssignmentsHint": "Select the party members responsible for this location.",
+  "PF2E.PointsTracker.Research.LocationAssignmentsUnavailable": "No player-owned characters are currently available to assign.",
+  "PF2E.PointsTracker.Research.LocationAssignmentsDisplay": "Assigned Party Members",
+  "PF2E.PointsTracker.Research.LocationAssignmentsMissing": "{name} (not currently in party)",
+  "PF2E.PointsTracker.Research.LocationAssignmentMissing": "Not currently in party",
   "PF2E.PointsTracker.Research.LocationList": "Locations",
   "PF2E.PointsTracker.Research.LocationListHint": "Define the research sites, their maximum points, and any starting progress.",
   "PF2E.PointsTracker.Research.LocationLogSuffix": " ({location})",
