Add automatic research point updates from skill checks

--- a/lang/en.json
+++ b/lang/en.json
@@ -10,6 +10,11 @@
   "PF2E.PointsTracker.Research.Apply": "Apply",
   "PF2E.PointsTracker.Research.ApplyPoints": "Apply Research Points",
   "PF2E.PointsTracker.Research.ActorMissingSkills": "Selected actor does not have skills available for rolling.",
+  "PF2E.PointsTracker.Research.AutoOutcome.criticalFailure": "Critical Failure",
+  "PF2E.PointsTracker.Research.AutoOutcome.criticalSuccess": "Critical Success",
+  "PF2E.PointsTracker.Research.AutoOutcome.failure": "Failure",
+  "PF2E.PointsTracker.Research.AutoOutcome.success": "Success",
+  "PF2E.PointsTracker.Research.AutoReason": "Automatic: {skill} check ({outcome}).",
   "PF2E.PointsTracker.Research.Create": "Create",
   "PF2E.PointsTracker.Research.CreateLocation": "Create Location",
   "PF2E.PointsTracker.Research.CreateTopic": "New Topic",
