Support multiple skill checks per research location

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,7 @@
   "PF2E.PointsTracker.Research.Title": "Research Tracker",
   "PF2E.PointsTracker.Research.Actions": "Actions",
   "PF2E.PointsTracker.Research.Add": "Add",
+  "PF2E.PointsTracker.Research.AddCheck": "Add Skill/DC",
   "PF2E.PointsTracker.Research.AddLocation": "Add Location",
   "PF2E.PointsTracker.Research.AdjustPoints": "Adjust Research Points",
   "PF2E.PointsTracker.Research.Apply": "Apply",
@@ -57,6 +58,7 @@
   "PF2E.PointsTracker.Research.LocationNameHeader": "Location",
   "PF2E.PointsTracker.Research.LocationOptionLabel": "{name} ({collected}/{max})",
   "PF2E.PointsTracker.Research.LocationPostCheck": "Post Check",
+  "PF2E.PointsTracker.Research.LocationSelectCheck": "Select Check",
   "PF2E.PointsTracker.Research.LocationProgress": "{collected} / {max}",
   "PF2E.PointsTracker.Research.LocationProgressHeader": "Progress",
   "PF2E.PointsTracker.Research.LocationSkill": "Location Skill",
@@ -83,6 +85,7 @@
   "PF2E.PointsTracker.Research.ProgressLabel": "Progress: {collected} / {target}",
   "PF2E.PointsTracker.Research.Completed": "Completed",
   "PF2E.PointsTracker.Research.RemoveLocation": "Remove Location",
+  "PF2E.PointsTracker.Research.RemoveCheck": "Remove Check",
   "PF2E.PointsTracker.Research.Reason": "Reason",
   "PF2E.PointsTracker.Research.ResearchChecks": "Research Checks",
   "PF2E.PointsTracker.Research.RevealMessageHeader": "{topic} - {points} RP",
