feat: enable drag and drop assignments

--- a/lang/en.json
+++ b/lang/en.json
@@ -50,6 +50,9 @@
   "PF2E.PointsTracker.Research.LocationAssignmentsDisplay": "Assigned Party Members",
   "PF2E.PointsTracker.Research.LocationAssignmentsMissing": "{name} (not currently in party)",
   "PF2E.PointsTracker.Research.LocationAssignmentMissing": "Not currently in party",
+  "PF2E.PointsTracker.Research.LocationAssignmentsDropPrompt": "Drag party members here to assign.",
+  "PF2E.PointsTracker.Research.LocationAssignmentsEmpty": "No party members assigned yet.",
+  "PF2E.PointsTracker.Research.LocationAssignmentsRemove": "Remove assignment",
   "PF2E.PointsTracker.Research.LocationList": "Locations",
   "PF2E.PointsTracker.Research.LocationListHint": "Define the research sites, their maximum points, and any starting progress.",
   "PF2E.PointsTracker.Research.LocationLogSuffix": " ({location})",
