Add threshold editing to research topic dialog

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,7 @@
   "PF2E.PointsTracker.Research.Add": "Add",
   "PF2E.PointsTracker.Research.AddCheck": "Add Skill/DC",
   "PF2E.PointsTracker.Research.AddLocation": "Add Location",
+  "PF2E.PointsTracker.Research.AddThreshold": "Add Threshold",
   "PF2E.PointsTracker.Research.AdjustPoints": "Adjust Research Points",
   "PF2E.PointsTracker.Research.Apply": "Apply",
   "PF2E.PointsTracker.Research.ApplyPoints": "Apply Research Points",
@@ -32,6 +33,8 @@
   "PF2E.PointsTracker.Research.ExportSuccess": "Exported research topics to a JSON file.",
   "PF2E.PointsTracker.Research.GatherInformation": "Gather Information",
   "PF2E.PointsTracker.Research.GMText": "GM Notes",
+  "PF2E.PointsTracker.Research.RevealText": "Reveal Text",
+  "PF2E.PointsTracker.Research.PlayerText": "Reveal Text",
   "PF2E.PointsTracker.Research.Import": "Import",
   "PF2E.PointsTracker.Research.ImportDescription": "Select a JSON file exported from the research tracker to merge topics into this world.",
   "PF2E.PointsTracker.Research.ImportFailure": "Unable to read the selected file.",
@@ -90,6 +93,7 @@
   "PF2E.PointsTracker.Research.ProgressLabel": "Progress: {collected} / {target}",
   "PF2E.PointsTracker.Research.Completed": "Completed",
   "PF2E.PointsTracker.Research.RemoveLocation": "Remove Location",
+  "PF2E.PointsTracker.Research.RemoveThreshold": "Remove Threshold",
   "PF2E.PointsTracker.Research.RemoveCheck": "Remove Check",
   "PF2E.PointsTracker.Research.Reason": "Reason",
   "PF2E.PointsTracker.Research.ResearchChecks": "Research Checks",
@@ -107,6 +111,7 @@
   "PF2E.PointsTracker.Research.Summary": "Summary",
   "PF2E.PointsTracker.Research.Target": "Target Points",
   "PF2E.PointsTracker.Research.TargetLabel": "Target {target} (Current {progress})",
+  "PF2E.PointsTracker.Research.ThresholdPointsLabel": "Threshold Points",
   "PF2E.PointsTracker.Research.ThresholdLocked": "Locked",
   "PF2E.PointsTracker.Research.ThresholdPoints": "Reveal at {points} RP",
   "PF2E.PointsTracker.Research.ThresholdRevealed": "Sent",
