--- a/lang/en.json
+++ b/lang/en.json
@@ -31,6 +31,7 @@
   "PF2E.PointsTracker.Research.EditTopic": "Edit Topic",
   "PF2E.PointsTracker.Research.Export": "Export",
   "PF2E.PointsTracker.Research.ExportSuccess": "Exported research topics to a JSON file.",
+  "PF2E.PointsTracker.Research.ExpandTopic": "Expand topic details",
   "PF2E.PointsTracker.Research.GatherInformation": "Gather Information",
   "PF2E.PointsTracker.Research.GMText": "GM Notes",
   "PF2E.PointsTracker.Research.RevealText": "Reveal Text",
@@ -92,6 +93,7 @@
   "PF2E.PointsTracker.Research.PointsSpent": "Spent {points} research points.",
   "PF2E.PointsTracker.Research.ProgressLabel": "Progress: {collected} / {target}",
   "PF2E.PointsTracker.Research.Completed": "Completed",
+  "PF2E.PointsTracker.Research.CollapseTopic": "Collapse topic details",
   "PF2E.PointsTracker.Research.RemoveLocation": "Remove Location",
   "PF2E.PointsTracker.Research.RemoveThreshold": "Remove Threshold",
   "PF2E.PointsTracker.Research.RemoveCheck": "Remove Check",
