Add GM manage locations shortcut

--- a/lang/en.json
+++ b/lang/en.json
@@ -76,6 +76,12 @@
   "PF2E.PointsTracker.Research.LocationTotals": "Total: {collected} / {max}",
   "PF2E.PointsTracker.Research.LocationUnlimited": "∞",
   "PF2E.PointsTracker.Research.LocationsHeading": "Research Sites",
+  "PF2E.PointsTracker.Research.ManageLocations": "Manage Locations",
+  "PF2E.PointsTracker.Research.ManageLocationsCreate": "Create New Location",
+  "PF2E.PointsTracker.Research.ManageLocationsHint": "Select a location to edit or choose Create New to add another site.",
+  "PF2E.PointsTracker.Research.ManageLocationsMissing": "The selected location could not be found.",
+  "PF2E.PointsTracker.Research.ManageLocationsOpen": "Open Editor",
+  "PF2E.PointsTracker.Research.ManageLocationsSelect": "Manage Location",
   "PF2E.PointsTracker.Research.LocationMissingSkill": "Set a skill for this location before posting a check.",
   "PF2E.PointsTracker.Research.LocationMissingDC": "Set a DC for this location before posting a check.",
   "PF2E.PointsTracker.Research.Log": "Research Log",
