Add reveal controls for research locations

--- a/lang/en.json
+++ b/lang/en.json
@@ -60,6 +60,7 @@
   "PF2E.PointsTracker.Research.LocationList": "Locations",
   "PF2E.PointsTracker.Research.LocationListHint": "Define the research sites, their maximum points, and any starting progress.",
   "PF2E.PointsTracker.Research.LocationLogSuffix": " ({location})",
+  "PF2E.PointsTracker.Research.LocationHiddenTag": "Hidden from players",
   "PF2E.PointsTracker.Research.LocationMaxPoints": "Maximum Points",
   "PF2E.PointsTracker.Research.LocationName": "Location Name",
   "PF2E.PointsTracker.Research.LocationNameHeader": "Location",
@@ -76,6 +77,13 @@
   "PF2E.PointsTracker.Research.LocationTotals": "Total: {collected} / {max}",
   "PF2E.PointsTracker.Research.LocationUnlimited": "∞",
   "PF2E.PointsTracker.Research.LocationsHeading": "Research Sites",
+  "PF2E.PointsTracker.Research.LocationReveal": "Reveal Location",
+  "PF2E.PointsTracker.Research.LocationRevealResend": "Resend Reveal",
+  "PF2E.PointsTracker.Research.LocationRevealMessageHeader": "{topic}: {location}",
+  "PF2E.PointsTracker.Research.LocationRevealLog": "Revealed {location} for {topic}.",
+  "PF2E.PointsTracker.Research.LocationResendLog": "Resent reveal for {location} in {topic}.",
+  "PF2E.PointsTracker.Research.LocationRevealChecks": "Checks",
+  "PF2E.PointsTracker.Research.LocationRevealAssignments": "Assigned Party Members",
   "PF2E.PointsTracker.Research.ManageLocations": "Manage Locations",
   "PF2E.PointsTracker.Research.ManageLocationsCreate": "Create New Location",
   "PF2E.PointsTracker.Research.ManageLocationsHint": "Select a location to edit or choose Create New to add another site.",
