Refine research topic metadata and add level support

--- a/lang/en.json
+++ b/lang/en.json
@@ -108,6 +108,9 @@
   "PF2E.PointsTracker.Research.ProgressLabel": "Progress: {collected} / {target}",
   "PF2E.PointsTracker.Research.Completed": "Completed",
   "PF2E.PointsTracker.Research.CollapseTopic": "Collapse topic details",
+  "PF2E.PointsTracker.Research.Level": "Research Level",
+  "PF2E.PointsTracker.Research.LevelLabel": "Research Level: {level}",
+  "PF2E.PointsTracker.Research.TopicName": "Topic Name",
   "PF2E.PointsTracker.Research.RemoveLocation": "Remove Location",
   "PF2E.PointsTracker.Research.RemoveThreshold": "Remove Threshold",
   "PF2E.PointsTracker.Research.RemoveCheck": "Remove Check",
