Hide research progress totals from players

--- a/lang/en.json
+++ b/lang/en.json
@@ -68,6 +68,7 @@
   "PF2E.PointsTracker.Research.LocationPostCheck": "Post Check",
   "PF2E.PointsTracker.Research.LocationSelectCheck": "Select Check",
   "PF2E.PointsTracker.Research.LocationProgress": "{collected} / {max}",
+  "PF2E.PointsTracker.Research.LocationProgressHidden": "— / —",
   "PF2E.PointsTracker.Research.LocationProgressHeader": "Progress",
   "PF2E.PointsTracker.Research.LocationSkill": "Location Skill",
   "PF2E.PointsTracker.Research.LocationSkillLabel": "Skill: {skill}",
@@ -75,6 +76,7 @@
   "PF2E.PointsTracker.Research.LocationSelectPlaceholder": "Select a location",
   "PF2E.PointsTracker.Research.LocationSelectRequired": "Select a location to adjust research points.",
   "PF2E.PointsTracker.Research.LocationTotals": "Total: {collected} / {max}",
+  "PF2E.PointsTracker.Research.LocationTotalsHidden": "Total: —",
   "PF2E.PointsTracker.Research.LocationUnlimited": "∞",
   "PF2E.PointsTracker.Research.LocationsHeading": "Research Sites",
   "PF2E.PointsTracker.Research.LocationReveal": "Reveal Location",
@@ -106,6 +108,7 @@
   "PF2E.PointsTracker.Research.PointsNoChange": "No points gained or lost.",
   "PF2E.PointsTracker.Research.PointsSpent": "Spent {points} research points.",
   "PF2E.PointsTracker.Research.ProgressLabel": "Progress: {collected} / {target}",
+  "PF2E.PointsTracker.Research.ProgressHidden": "Progress: —",
   "PF2E.PointsTracker.Research.Completed": "Completed",
   "PF2E.PointsTracker.Research.CollapseTopic": "Collapse topic details",
   "PF2E.PointsTracker.Research.Level": "Research Level",
