Add reputation tracker and combine points tracking UI

--- a/lang/en.json
+++ b/lang/en.json
@@ -137,5 +137,28 @@
   "PF2E.PointsTracker.Research.ThresholdPoints": "Reveal at {points} RP",
   "PF2E.PointsTracker.Research.ThresholdRevealed": "Sent",
   "PF2E.PointsTracker.Research.ThresholdUnlocked": "Unlocked",
-  "PF2E.PointsTracker.Research.Thresholds": "Threshold Reveals"
+  "PF2E.PointsTracker.Research.Thresholds": "Threshold Reveals",
+  "PF2E.PointsTracker.Cancel": "Cancel",
+  "PF2E.PointsTracker.PointsTrackerTitle": "Points Tracker",
+  "PF2E.PointsTracker.Reputation.Title": "Reputation Tracker",
+  "PF2E.PointsTracker.Reputation.DefaultName": "New Faction",
+  "PF2E.PointsTracker.Reputation.CreateFaction": "Add Faction",
+  "PF2E.PointsTracker.Reputation.Create": "Create",
+  "PF2E.PointsTracker.Reputation.Save": "Save",
+  "PF2E.PointsTracker.Reputation.FactionName": "Faction Name",
+  "PF2E.PointsTracker.Reputation.Description": "Description",
+  "PF2E.PointsTracker.Reputation.Notes": "Notes",
+  "PF2E.PointsTracker.Reputation.MinValue": "Minimum Value",
+  "PF2E.PointsTracker.Reputation.MaxValue": "Maximum Value",
+  "PF2E.PointsTracker.Reputation.CurrentValue": "Current Value",
+  "PF2E.PointsTracker.Reputation.ValueLabel": "{value} Reputation (Range {min}–{max})",
+  "PF2E.PointsTracker.Reputation.LastUpdated": "Updated {timestamp}",
+  "PF2E.PointsTracker.Reputation.Increase": "Increase reputation",
+  "PF2E.PointsTracker.Reputation.Decrease": "Decrease reputation",
+  "PF2E.PointsTracker.Reputation.EditFaction": "Edit Faction",
+  "PF2E.PointsTracker.Reputation.DeleteFaction": "Delete Faction",
+  "PF2E.PointsTracker.Reputation.DeleteFactionConfirm": "Are you sure you want to delete {name}?",
+  "PF2E.PointsTracker.Reputation.Empty": "No factions have been added yet.",
+  "PF2E.PointsTracker.Reputation.NameRequired": "Enter a name for the faction before saving.",
+  "PF2E.PointsTracker.Reputation.ChangeNotification": "{name} reputation is now {value}."
 }
