Add awareness tracker management

--- a/lang/en.json
+++ b/lang/en.json
@@ -160,5 +160,27 @@
   "PF2E.PointsTracker.Reputation.DeleteFactionConfirm": "Are you sure you want to delete {name}?",
   "PF2E.PointsTracker.Reputation.Empty": "No factions have been added yet.",
   "PF2E.PointsTracker.Reputation.NameRequired": "Enter a name for the faction before saving.",
-  "PF2E.PointsTracker.Reputation.ChangeNotification": "{name} reputation is now {value}."
+  "PF2E.PointsTracker.Reputation.ChangeNotification": "{name} reputation is now {value}.",
+  "PF2E.PointsTracker.Awareness.Title": "Awareness Tracker",
+  "PF2E.PointsTracker.Awareness.DefaultName": "New Awareness Entry",
+  "PF2E.PointsTracker.Awareness.CreateEntry": "Add Awareness Entry",
+  "PF2E.PointsTracker.Awareness.Create": "Create",
+  "PF2E.PointsTracker.Awareness.Save": "Save",
+  "PF2E.PointsTracker.Awareness.EntryName": "Entry Name",
+  "PF2E.PointsTracker.Awareness.Category": "Category",
+  "PF2E.PointsTracker.Awareness.Category.location": "Location",
+  "PF2E.PointsTracker.Awareness.Category.person": "Person",
+  "PF2E.PointsTracker.Awareness.CurrentValue": "Current Awareness",
+  "PF2E.PointsTracker.Awareness.TargetValue": "Target Awareness",
+  "PF2E.PointsTracker.Awareness.Notes": "Notes",
+  "PF2E.PointsTracker.Awareness.AdjustIncrease": "Increase awareness",
+  "PF2E.PointsTracker.Awareness.AdjustDecrease": "Decrease awareness",
+  "PF2E.PointsTracker.Awareness.EditEntry": "Edit Awareness Entry",
+  "PF2E.PointsTracker.Awareness.DeleteEntry": "Delete Awareness Entry",
+  "PF2E.PointsTracker.Awareness.DeleteConfirm": "Are you sure you want to delete {name}?",
+  "PF2E.PointsTracker.Awareness.Empty": "No awareness entries have been recorded yet.",
+  "PF2E.PointsTracker.Awareness.ValueLabel": "{current} / {target}",
+  "PF2E.PointsTracker.Awareness.LastUpdated": "Updated {timestamp}",
+  "PF2E.PointsTracker.Awareness.NameRequired": "Enter a name for the awareness entry before saving.",
+  "PF2E.PointsTracker.Awareness.ChangeNotification": "Awareness for {name} is now {current}."
 }
